[gd_scene load_steps=7 format=2]

[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI Objects/TextBoxOverlay.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/text scroll.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.0196078, 0.168627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.832031, 0.832031, 0.832031, 1 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="TextBoxOverlay" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ParentMargin" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -68.0
margin_right = -12.0
margin_bottom = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="ParentMargin"]
margin_right = 296.0
margin_bottom = 69.0
custom_styles/panel = SubResource( 1 )

[node name="TextMargin" type="MarginContainer" parent="ParentMargin"]
margin_right = 296.0
margin_bottom = 69.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="TextContainer" type="HBoxContainer" parent="ParentMargin/TextMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 61.0

[node name="Start" type="Label" parent="ParentMargin/TextMargin/TextContainer"]
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "*"

[node name="Body" type="Label" parent="ParentMargin/TextMargin/TextContainer"]
margin_left = 14.0
margin_right = 266.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="ParentMargin/TextMargin/TextContainer"]
margin_left = 270.0
margin_top = 43.0
margin_right = 280.0
margin_bottom = 53.0
rect_min_size = Vector2( 10, 10 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "v"

[node name="ChoiceContainer" type="VBoxContainer" parent="ParentMargin/TextMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 61.0

[node name="Text" type="HBoxContainer" parent="ParentMargin/TextMargin/ChoiceContainer"]
margin_right = 280.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Label" parent="ParentMargin/TextMargin/ChoiceContainer/Text"]
margin_right = 138.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "yes"

[node name="Right" type="Label" parent="ParentMargin/TextMargin/ChoiceContainer/Text"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "no"

[node name="Selector" type="HBoxContainer" parent="ParentMargin/TextMargin/ChoiceContainer"]
margin_top = 39.0
margin_right = 280.0
margin_bottom = 53.0
size_flags_horizontal = 3

[node name="SelectLeft" type="Label" parent="ParentMargin/TextMargin/ChoiceContainer/Selector"]
margin_right = 16.0
margin_bottom = 14.0
rect_min_size = Vector2( 16, 14 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "/\\"

[node name="SelectRight" type="Label" parent="ParentMargin/TextMargin/ChoiceContainer/Selector"]
margin_left = 142.0
margin_right = 158.0
margin_bottom = 14.0
rect_min_size = Vector2( 16, 14 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "/\\"

[node name="Tween" type="Tween" parent="."]

[node name="TextScrollSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
